suppression des attributs getable depuis la base de données + correction de bug